[package]
name = "whisper"
description = "A small security tool written in Rust"
version = "0.1.0"
authors = ["Robert Wilcox <stampylongr7@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hhscyberclub/whisper"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
